--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-image-picker": "^7.0.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "restful-react": "^15.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
