--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-loader-kit": "^2.0.8",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.0",
     "restful-react": "^15.9.4"
   },
