--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-image-picker": "^7.0.1",
@@ -21,6 +22,8 @@
     "react-native-screens": "^3.33.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "restful-react": "^15.9.4"
   },
   "devDependencies": {
